package ejercicio3;

public class Audio extends Media{

	@Override
	public void play() {}
}
