package ejercicio3;

public class Media {

	public void play() {
	}
}
