package ejercicio3;

public class VideoFile extends Media{

	@Override
	public void play() {}

}
