package ejercicio3;

public class VideoStream {

	public void reproduce() {}
}
